# mcp-server-mas-sequential-thinking

./: .env.example  .gitignore  AI_ROUTING_VERIFICATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  REFACTORING_SUMMARY.md  demo_six_hats_philosophy.py  pyproject.toml  pytest.ini  run_tests.py  smithery.yaml  test_ai_routing_architecture.py  test_ai_routing_verification.py  test_complete_schema.py  test_mcp_schema.py  test_request.py  test_schema_validation.py  test_six_hats_integration.py  test_six_hats_simple.py
.git-agent/: config.yml
.github/workflows/: test.yml
src/mcp_server_mas_sequential_thinking/: __init__.py  adaptive_routing.py  adaptive_server.py  agent_optimization.py  agents.py  agno_workflow_router.py  ai_routing.py  base_executor.py  circuit_breaker.py  complexity_analyzer.py  constants.py  cost_optimization.py  enhanced_agents.py  intelligent_coordinator.py  logging_config.py  main.py  metrics_logger.py  model_specific_optimization.py  models.py  modernized_config.py  optimized_routing.py  persistent_memory.py  processing_constants.py  quality_assurance.py  quality_assurance.py.backup  response_processor.py  retry_handler.py  route_execution.py  server_core.py  session.py  six_hats_core.py  six_hats_processor.py  six_hats_router.py  smart_logging.py  team.py  types.py  unified_agents.py  unified_team.py  utils.py
src/mcp_server_mas_sequential_thinking/agents/: __init__.py  base_executor.py  unified_agents.py  unified_team.py
src/mcp_server_mas_sequential_thinking/analysis/: __init__.py  complexity_analyzer.py
src/mcp_server_mas_sequential_thinking/config/: __init__.py  constants.py  modernized_config.py  processing_constants.py
src/mcp_server_mas_sequential_thinking/core/: __init__.py  models.py  session.py  types.py
src/mcp_server_mas_sequential_thinking/infrastructure/: __init__.py  adaptive_server.py  logging_config.py  persistent_memory.py
src/mcp_server_mas_sequential_thinking/models/: __init__.py  claude_agent_sdk.py
src/mcp_server_mas_sequential_thinking/optimization/: __init__.py  agent_optimization.py  cost_optimization.py  model_specific_optimization.py
src/mcp_server_mas_sequential_thinking/processors/: __init__.py  multi_thinking_core.py  multi_thinking_processor.py  six_hats_core.py  six_hats_processor.py
src/mcp_server_mas_sequential_thinking/routing/: __init__.py  adaptive_routing.py  agno_workflow_router.py  ai_complexity_analyzer.py  complexity_types.py  multi_thinking_router.py  optimized_routing.py  six_hats_router.py
src/mcp_server_mas_sequential_thinking/security/: __init__.py  rate_limiter.py
src/mcp_server_mas_sequential_thinking/services/: __init__.py  context_builder.py  processing_orchestrator.py  response_formatter.py  response_processor.py  retry_handler.py  server_core.py  server_core_backup.py  thought_processor_refactored.py  workflow_executor.py
src/mcp_server_mas_sequential_thinking/utils/: __init__.py  utils.py
tests/: __init__.py  conftest.py  test_agno_workflow.py  test_github_provider.py  test_main_validation.py  test_models.py
tests/fixtures/: test_data.py
tests/helpers/: factories.py  mocks.py
tests/integration/: test_mcp_stdio_protocol.py  test_thought_processing.py
tests/unit/: test_agent_factory.py  test_agents_enhanced.py  test_ai_complexity_analyzer_methods.py  test_complexity_analyzer.py  test_complexity_metrics.py  test_config_enhanced.py  test_configuration_validation.py  test_constants.py  test_context_builder.py  test_cost_optimization_constants.py  test_logging_config.py  test_logging_mixin.py  test_models.py  test_models_enhanced.py  test_multi_thinking_core.py  test_multi_thinking_router.py  test_persistent_memory.py  test_processing_orchestrator.py  test_rate_limiter.py  test_refactoring_integration.py  test_response_formatter_service.py  test_response_processor.py  test_retry_handler.py  test_routing_integration.py  test_security_validation.py  test_session_enhanced.py  test_session_memory.py  test_step_executor_mixin.py  test_team_enhanced.py  test_types.py  test_unified_logging.py  test_workflow_executor.py
