[project]
name = "mcp-server-mas-sequential-thinking"
version = "0.4.0"
description = "MCP Agent Implementation for Sequential Thinking"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Frad LEE", email = "fradser@gmail.com" },
    { name = "Alain Ivars", email = "alainivars@gmail.com" },
]
dependencies = [
    "agno>=2.0.5",
    "asyncio",
    "exa-py",
    "python-dotenv",
    "mcp",
    "groq",
    "ollama",
    "openrouter",
    "httpx[socks]>=0.28.1",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
mcp-server-mas-sequential-thinking = "mcp_server_mas_sequential_thinking.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_mas_sequential_thinking"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
